[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "wujihandpy"
dynamic = ["version"]
description = "Python bindings for WujiHandCpp"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Zihan Qin", email = "zihanqin2048@gmail.com" }]
maintainers = [{ name = "Wuji Technology", email = "support@pan-motor.com" }]
dependencies = ["numpy"]

[project.urls]
homepage = "https://github.com/Wuji-Technology-Co-Ltd/wujihandpy"
repository = "https://github.com/Wuji-Technology-Co-Ltd/wujihandpy"
"Bug Tracker" = "https://github.com/Wuji-Technology-Co-Ltd/wujihandpy/issues"

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["src/wujihandpy/_version.py"]

[tool.setuptools_scm]
write_to = "src/wujihandpy/_version.py"

[tool.cibuildwheel]
archs = ["auto64"]

[tool.cibuildwheel.windows]
repair-wheel-command = '''
delvewheel repair --add-path "%VCPKG_ROOT%\\installed\\x64-windows\\bin" -w {dest_dir} {wheel}
'''